@@ -86,6 +86,8 @@ public:
     virtual bool        isPrimary() const;
     String              getSecureInputApp() const override;
 
+    void                updateScrollDirection() override;
+
 protected:
     // IPlatformScreen overrides
     virtual void        handleSystemEvent(const Event&, void*);
@@ -251,4 +253,8 @@ private:
     // pointer to (singleton) screen.  this is only needed by
     // ioErrorHandler().
     static XWindowsScreen*    s_screen;
+
+    // -1 for natural scrolling direction, 1 otherwise
+    SInt32                    m_scrollDirectionMouse = 1;
+    SInt32                    m_scrollDirectionTouchpad = 1;
 };
